--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="social-icons">
                 <!-- غير روابط # إلى روابط صفحاتك الفعلية -->
                 <a href="https://facebook.com/your-username" target="_blank" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://t.me/your-username" target="_blank" class="social-icon telegram"><i class="fab fa-telegram"></i></a>
+                <a href="https://t.me/@Boz79" target="_blank" class="social-icon telegram"><i class="fab fa-telegram"></i></a>
                 <a href="https://instagram.com/your-username" target="_blank" class="social-icon instagram"><i class="fab fa-instagram"></i></a>
-                <a href="https://wa.me/your-number" target="_blank" class="social-icon whatsapp"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://wa.me/218911204107" target="_blank" class="social-icon whatsapp"><i class="fab fa-whatsapp"></i></a>
                 <a href="https://youtube.com/your-channel" target="_blank" class="social-icon youtube"><i class="fab fa-youtube"></i></a>
-                <a href="mailto:your-email@example.com" class="social-icon email"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:buzidi99@gmail.com" class="social-icon email"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
