--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>اسمك هنا | Your Name</title>
+    <title> محمد البوزيدي | Your Name</title>
     
     <!-- رابط خط جميل من Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
